[tool.poetry]
name = "evmoscan"
version = "0.1.0"
description = ""
authors = ["Frank Xia <tyxia2004@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.2"
requests = "^2.26.0"
backoff = "^1.11.1"
click = "^8.0.3"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
